CHANGELOG
--------------------------

ClanSphere 2011.4.4 >> 2014-03-XX
___________________________________________________________

-> Fixed cache problems with multiple theme usage (patch by github.com/testerjoe)
-> Fixed GET and REQUEST data handling for 'id' and 'sort' (jam2)
-> Fixed SQL incompatibilities with PostgreSQL (pull request by github.com/tbe)
   Updated with fixes and enhancements (hajo)


ClanSphere 2011.4.3 >> 2013-12-06
___________________________________________________________

-> Fixed banners edit containing multiple ways to remove the picture (hajo)
-> Fixed games mod version data not saved (hajo)
-> Fixed newsletter mod not handling name selection for clan and squad mod (palle)
-> Updated slimbox to 2.05 (hajo)


ClanSphere 2011.4.2 >> 2013-10-14
___________________________________________________________

-- Recommended PHP version is now the last one that fixes a known issue: 5.4.6
-- Newer versions of PHP should work the same or even better

-> Added board repair page to fix thread metadata issues (hajo)
   Also helps to fix wrong data if your initial ClanSphere version was older than 2011
-> Added currency name option to cash module (hajo)
-> Fixed banners rotation not working when only one banner is found (hajo)
-> Fixed boardvotes not usable on different accounts due to same ip (tom08)
-> Fixed votes navlist random sort not used with mysqli database extension (hajo)


ClanSphere 2011.4.1 >> 2013-05-20
___________________________________________________________

-- Recommended PHP version changed to 5.4.15

-> Downgraded jQuery to 1.8.3 [R1]
-> Changed jabber info to no longer contain Google service examples (hajo)
   Google combined the services to Hangouts which is not compatible with jabber
-> Fixed board threads marked as unread for no reason due to deleted comments (hajo)
   This fix only affects the mass deletion of comments over the comments mod
-> Fixed users manage page turns not working in some cases (hajo) [R2]